--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,36 @@
 .App {
   text-align: center;
+  width:100%;
+  height:100vh;
+}
+
+.pokemonCardContainer{
+  display: grid;
+  grid-template-columns: 1fr  1fr 1fr;
+  place-items: center;
+  gap:20px;
+  margin-top:20px;
+}
+
+.btn{
+  padding:30px 0;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  gap:20px;
+}
+.btn button{
+  padding: 13px 32px;
+  background-color: aliceblue;
+  border: none;
+  box-shadow: 16px 27px 17px 17px #777777;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.btn button:hover{
+  transform: translateY(5px);
+  box-shadow: none;
 }
